--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,28 @@
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.talend.ipaas.rt.activemq.security</groupId>
+            <artifactId>activemq-security-plugin</artifactId>
+            <version>2.5.0-SNAPSHOT</version>
+        </dependency>
+        -->
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>talend</id>
+            <name>Talend</name>
+            <url>https://artifacts-zl.talend.com/nexus/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
