--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,9 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.talend.poc.amq.Main</mainClass>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                  <resource>META-INF/cxf/bus-extensions.txt</resource>
+                                </transformer>
                             </transformers>
                         </configuration>
                     </execution>
